# esp32-webserver-cpp

./: CMakeLists.txt  Kconfig  README.md  component.mk
examples/auth/: CMakeLists.txt  platformio.ini  sdkconfig.defaults  www-next
examples/auth/main/: main.cpp  www_fs.cpp
examples/session/main/: main.cpp  uuid.h  www_fs.h
examples/simple/: Makefile  menuconfig.sh  partitions.csv  sdkconfig.defaults
examples/simple/main/: CMakeLists.txt  main.cpp  www_fs.cpp  www_fs.h
examples/simple/www-next/: .env  .gitignore  compile.sh  generate_www  package.json  users.json
examples/simple/www-next/lib/: BMSpacer.js  _brand.js  _mainLinks.js  _socket.js  mobile.js  switchSidebar.js
examples/simple/www-next/pages/: _app.js  index.js  log.js  login.js  network.js  update.js
examples/simple/www-next/pages/api/: log.js
examples/simple/www-next/public/: manifest.json
examples/simple/www-next/server/: server.js
examples/simple/www-next/test/: test.js  test_local.js
src/: exjson.hpp  express.cpp  express.h  ramlog.cpp  ramlog.h
